fix: header covering vertical scrollbar

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -9,6 +9,17 @@
   }
 }
 
+@media (max-width: 767px) {
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgb(239 68 68);
+    border-radius: 4px;
+  }
+}
+
 * {
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
     'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
